# API-Testing-RL

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  __init__.py  baseline.py  client.py  eval_trained.py  gradio_app.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  setup.sh  train_grpo.py
data/: tasks.json
plots/: plot_inference_results.py
server/: Dockerfile  app.py  bug_detector.py  environment.py  graders.py  reward.py
server/buggy_api/: database.py  main.py  models.py
server/buggy_api/routes/: auth.py  tasks.py  users.py
training/: README.md  __init__.py  agents.py  evaluate.py  grpo.py  prompts.py  rewards.py
